[package]
name = "kosmos"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.44.1", features = ["full"] }
axum = { version = "0.8.1", features = ["multipart"] }

tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.1", features = ["full"] }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres"] }

dotenvy = "0.15.7"
thiserror = "2.0.11"

tracing = "0.1.41"
tracing-subscriber = "0.3.19"

chrono = { version = "0.4.40", features = ["serde"] }